=== 3.41.0 (2012-11-01)

* Add bin/sequel usage guide (jeremyevans)

* Make Dataset#reverse and #reverse_order accept virtual row blocks (jeremyevans)

* Add Sequel.delay for generic delayed evaluation (jeremyevans)

* Make uniqueness validations correctly handle nil values (jeremyevans)

* Support :unlogged option for create_table on PostgreSQL (JonathanTron) (#575)

* Add ConnectionPool#pool_type to get the type of connection pool in use (jeremyevans)

* Explicitly mark primary keys as NOT NULL on SQLite (jeremyevans)

* Add support for renaming primary key columns on MySQL (jeremyevans)

* Add connection_validator extension for automatically checking connections and transparently handling disconnects (jeremyevans)

* Add Database#valid_connection? for checking whether a given connection is valid (jeremyevans)

* Make dataset.limit(nil, nil) reset offset as well as limit (jeremyevans) (#571)

* Support IMMEDIATE/EXCLUSIVE/DEFERRED transaction modes on SQLite (Eric Wong)

* Major change in the Database <-> ConnectionPool interface (jeremyevans)

* Make touch plugin handle touching of many_*_many associations (jeremyevans)

* Make single_table_inheritance plugin handle non-bijective mappings (hannesg) (#567)

* Support foreign key parsing on MSSQL (munkyboy) (#564)

* Include SQL::AliasMethods in most pg_* extension objects (treydempsey, jeremyevans) (#563)

* Handle failure to create a prepared statement better in the postgres, mysql, and mysql2 adapters (jeremyevans) (#560)

* Treat clob columns as strings instead of blobs (jeremyevans)

=== 3.40.0 (2012-09-26)

* Add a cubrid adapter for accessing CUBRID databases via the cubrid gem (jeremyevans)

* Add a jdbc/cubrid adapter for accessing CUBRID databases via JDBC on JRuby (jeremyevans)

* Return OCI8::CLOB values as ruby Strings in the Oracle adapter (jeremyevans)

* Use clob for String :text=>true types on Oracle, DB2, HSQLDB, and Derby (jeremyevans) (#555)
